--- a/public/chat.html
+++ b/public/chat.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Chat SkillSwap</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="chat.css">
+
   <style>
     .message-container { height: 400px; overflow-y: scroll; background: #f8f9fa; padding: 1rem; border-radius: 8px; }
     .message.mine { text-align: right; color: #0d6efd; }
@@ -22,46 +24,7 @@
     </div>
   </div>
 
-  <script>
-    const conversationId = "686d18c2be98178d9e21bc67"; // reemplazar por ID real
-    const currentUserId = "68683033e54654d8b7365d7c"; // tu ID real
-    const messagesContainer = document.getElementById('messages');
+  <script src="chat.js"></script>
 
-    function loadMessages() {
-      fetch(`/api/chat/messages/${conversationId}`)
-        .then(res => res.json())
-        .then(data => {
-          messagesContainer.innerHTML = "";
-          data.messages.forEach(msg => {
-            const div = document.createElement('div');
-            div.className = `message ${msg.sender === currentUserId ? 'mine' : 'theirs'}`;
-            div.textContent = msg.text;
-            messagesContainer.appendChild(div);
-          });
-          messagesContainer.scrollTop = messagesContainer.scrollHeight;
-        });
-    }
-
-    document.getElementById('sendBtn').addEventListener('click', () => {
-      const text = document.getElementById('messageInput').value;
-      if (text.trim() === '') return;
-
-      fetch('/api/chat/message', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({
-          conversationId,
-          senderId: currentUserId,
-          text
-        })
-      }).then(() => {
-        document.getElementById('messageInput').value = '';
-        loadMessages();
-      });
-    });
-
-    // Cargar mensajes al abrir
-    loadMessages();
-  </script>
 </body>
 </html>
