--- a/public/conversaciones.html
+++ b/public/conversaciones.html
@@ -1,43 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Mis conversaciones</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <title>Conversaciones - SkillSwap</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="chat.css">
 </head>
 <body class="bg-light">
   <div class="container mt-4">
-    <h2>💬 Conversaciones activas</h2>
-    <ul id="chatList" class="list-group mt-3"></ul>
+    <h2 class="mb-4">💬 Tus Conversaciones</h2>
+    <div id="conversationList" class="list-group"></div>
   </div>
 
-  <script>
-    const userId = "68683033e54654d8b7365d7c"; // Reemplaza con tu ID real
-
-    fetch(`/api/chat/conversations/${userId}`)
-      .then(res => res.json())
-      .then(data => {
-        const list = document.getElementById('chatList');
-        if (data.conversations.length === 0) {
-          list.innerHTML = '<li class="list-group-item">Aún no tienes conversaciones</li>';
-          return;
-        }
-
-        data.conversations.forEach(conv => {
-          // Mostrar los IDs de los participantes
-          const otherUser = conv.participants.find(p => p !== userId);
-          const li = document.createElement('li');
-          li.className = "list-group-item d-flex justify-content-between align-items-center";
-          li.innerHTML = `
-            <div>
-              <strong>Usuario:</strong> ${otherUser}
-              <br><small>ID conversación: ${conv._id}</small>
-            </div>
-            <a href="chat.html?conversationId=${conv._id}&userId=${userId}" class="btn btn-sm btn-primary">Abrir</a>
-          `;
-          list.appendChild(li);
-        });
-      });
-  </script>
+  <script src="conversaciones.js"></script>
 </body>
 </html>
