--- a/public/chat.html
+++ b/public/chat.html
@@ -5,6 +5,8 @@
   <title>Chat SkillSwap</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="chat.css">
+  <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
+
 
   <style>
     .message-container { height: 400px; overflow-y: scroll; background: #f8f9fa; padding: 1rem; border-radius: 8px; }
@@ -21,6 +23,10 @@
     <div class="input-group">
       <input type="text" id="messageInput" class="form-control" placeholder="Escribe un mensaje...">
       <button class="btn btn-primary" id="sendBtn">Enviar</button>
+      <div id="emojiContainer">
+        <button id="emojiBtn">😊</button>
+        <emoji-picker id="emojiPicker"></emoji-picker>
+      </div>
     </div>
   </div>
 
